...
    <string name="enter_qunatity">Enter qunatity</string>
    <string name="component_added">Component added</string>
    <string name="component_updated">Component updated</string>
    <string name="component_deleted">Component deleted</string>
    <string name="box_updated">Matches box updated</string>
    <string name="box_deleted">Matches Box Deleted</string>
    <string name="button_plus" translatable="false">+</string>
    <string name="button_minus" translatable="false">-</string>
    <string name="add_bag">Add Bag</string>
    <string name="update_bag">Update Bag</string>
    <string name="add_set">Add Set</string>
    <string name="update_set">Update Set</string>
    <string name="add_box">Add Box</string>
    <string name="update_box">Update Box</string>
    <string name="add_component">Add Component</string>
    <string name="update_component">Update Component</string>
    <string name="search">Search</string>
    <string name="no_components_found">No components found</string>
    <string name="search_components">Search components</string>
    <string name="buy_components">Buy components</string>
    <string name="buy_component">Buy</string>
    <string name="quantity_hint" translatable="false">0</string>
    <string name="direcotry_icon">Directory Icon</string>
    <string name="component_icon">Component icon</string>
    <string name="details">Details</string>
    <string name="no_sets">No Sets</string>
...
